--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,28 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "Task Manager Server",
+  "description": "Project Manager",
   "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gokul2424/Task-Manager.git"
-  },
-  "author": "gokul",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/gokul2424/Task-Manager/issues"
-  },
-  "homepage": "https://github.com/gokul2424/Task-Manager#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "mongod": "^2.0.0",
     "mongodb": "^3.1.13"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gokul2424/Project_Manager.git"
+  },
+  "author": "Gokul Praveen",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gokul2424/Project_Manager/issues"
+  },
+  "homepage": "https://github.com/gokul2424/Project_Manager#readme"
 }
